# Eigenface

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: .requirement-specification.md.swp  implementation.md  instructions.md  requirement-specification.md  requirement_specification.md  test_documentation.md
documentation/weekly/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: .coverage  coverage.xml  eigenfaces.ipynb  eigenfaces.py  eigenfaces_class.py  helpers.py  index.py  time_complexity_tests.ipynb
src/htmlcov/: __init___py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_EigenfaceHelpers_py.html  helpers_py.html  index.html  status.json
src/tests/: test_EigenfaceHelpers.py
