[tool.poetry]
name = "eigenface"
version = "0.1.0"
description = "Eigenface face recognition project for University of Helsinki's Data structures and algorithms course."
authors = ["ni-eminen <matiasnie2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
